# Umbra

./: .clang-format  .editorconfig  .gitignore  CMakeLists.txt  CONTRIBUTING.md  CTestTestfile.cmake  HOW_TO_CONTRIBUTE.md  Lexer.cpp  Lexer.h  README.md  SETUP.md  umbra_output
.cache/clangd/index/: ASTNode.h.8F9111FE2AD2AB10.idx  ASTNode.h.AA1528BFC662B990.idx  CompilerError.cpp.EF40FC2C9091DEB5.idx  CompilerError.h.D3515FC5930CF898.idx  ErrorManager.cpp.5889658F51789911.idx  ErrorManager.h.D01B26A28275FC67.idx  ErrorTypes.h.C3C367FA9F413C9A.idx  Lexer.cpp.587702421B07BE1F.idx  Lexer.h.25902D8CC3D95241.idx  Nodes.cpp.80E343D010E42B15.idx  Nodes.h.BD2CC99DEF75A2F1.idx  Parser.cpp.C2B5B245C86B1BB7.idx  Parser.h.5BA360B8301BD0E7.idx  Preprocessor.cpp.F722701AD5A8418E.idx  Preprocessor.h.C77A80CDBA6B6174.idx  Tokens.h.0A69015A1E4BA1EC.idx  additive_expression_node.h.725FC0ED89E485B8.idx  additive_expression_node.h.7697A9205062E9D2.idx  binary_expression_node.h.999D909607388E68.idx  else_statement_node.h.D80C175986569485.idx  else_statement_node.h.DCAA4429CCBE0D22.idx  elseif_statement_node.h.A4AF9D825B8E2AE7.idx  equality_expression_node.h.39570BFECE7357BF.idx  expression_node.h.33223D59EC0E86A0.idx  expression_node.h.39038B580884CC4E.idx  function_definition_node.h.33A09FB5611BC83E.idx  function_definition_node.h.B8A3238380F7FD23.idx  function_definition_tail_node.h.0B32FFCB9DC97D63.idx  function_definition_tail_node.h.7D223E39959FC4E4.idx  identifier_node.h.B90F7B2877E7EED6.idx  identifier_node.h.DE63A1EB40DEC52A.idx  if_statement_node.h.7FDDB5A3A9555DA8.idx  if_statement_node.h.C79174F59E751848.idx  lexer_test.cpp.DAAAD69107A48978.idx  logical_and_expression_node.h.C90D3DBAC303C87E.idx  logical_and_expression_node.h.F8E56AF9F1E4AF96.idx  logical_or_expression_node.h.CB05C8F7F758458A.idx  logical_or_expression_node.h.D787C57A48CE5178.idx  main.cpp.E923591932724478.idx  multiplicative_expression_node.h.356C99EA7BDE47C6.idx  (+20 more)
docs/: Basicflow.txt  ClassDiagram.txt  LLVM-flow.txt  sintasix.txt
docs/syntax tree/: ST_binaryOperation.dot  ST_conditional.dot  ST_function.dot  ST_program.dot  ST_varDeclaration.dot  generate_images.sh  program.md  program.txt
examples/: a.umbra  declarations.umbra  error_messages_test.umbra  error_messages_test2.umbra  file_inclusion.umbra  for.umbra  h_w.umbra  helloworld.umbra  if.umbra  io.umbra  loop_multidim_array.umbra  mismatch_test.umbra  recursive.umbra  simple_test.umbra  simple_test2.umbra  simple_test3.umbra  simple_test4.umbra  static_arrays.umbra  stress_test.umbra  test_array_access.umbra  test_array_complex.umbra  test_array_error.umbra  test_array_expr.umbra  test_array_valid.umbra  test_expr_index.umbra  test_inc_loop.umbra  test_inc_simple.umbra  test_increment.umbra  test_increment_array.umbra  test_matrix_read.umbra  test_matrix_vars.umbra  test_matrix_write.umbra  test_multidim.umbra  test_pointers.umbra  test_ptr_decl.umbra  test_ptr_switch.umbra  test_ptr_write.umbra  test_simple.umbra  test_simple_array.umbra  test_tensor_vars.umbra  (+4 more)
include/io/: UmbraIO.h
include/umbra/ast/: ASTNode.h  Nodes.h  PrintASTVisitor.h  Types.h  Visitor.h  VisitorNodes.def
include/umbra/codegen/context/: CodegenContext.h
include/umbra/codegen/visitors/: CodegenVisitor.h
include/umbra/compiler/: Compiler.h
include/umbra/error/: CompilerError.h  ErrorManager.h  ErrorTypes.h
include/umbra/io/: UmbraIO.h
include/umbra/lexer/: Lexer.h  LookUpKeyword.h
include/umbra/parser/: Parser.h
include/umbra/preprocessor/: Preprocessor.h  Sanitize.h
include/umbra/semantic/: SemanticAnalyzer.h  SemanticContext.h  SemanticType.h  SymbolCollector.h  SymbolTable.h  TypeCk.h
include/umbra/utils/: builtin_types.def  utils.h
src/: main.cpp
src/ast/: ASTNode.h  ASTVisitor.cpp  ASTVisitor.h  LLVMVisitor.cpp  LLVMVisitor.h  Nodes.cpp  Nodes.h  ProgramNode.cpp  ProgramNode.h  Types.h
src/ast/expressionnodes/: ExpressionNode.cpp  ExpressionNode.h
src/ast/nodes/: additive_expression_node.h  else_statement_node.h  elseif_statement_node.h  expression_node.h  function_definition_node.h  function_definition_tail_node.h  identifier_node.h  if_statement_node.h  logical_and_expression_node.h  logical_or_expression_node.h  multiplicative_expression_node.h  param_node.h  parameters_node.h  primary_expression_node.h  program_node.h  relational_expression_node.h  statement_list_node.h  type_node.h  unary_expression_node.h
src/ast/nodes/include/: else_statement_node.h  expression_node.h  function_definition_node.h  identifier_node.h  if_statement_node.h  logical_and_expression_node.h  logical_or_expression_node.h  multiplicative_expression_node.h  param_node.h  parameters_node.h  primary_expression_node.h  program_node.h  relational_expression_node.h  statement_list_node.h  statement_node.h  unary_expression_node.h  (+1 more)
src/ast/statementnodes/: StatementNode.cpp  StatementNode.h
src/ast/visitor/: ASTVisitor.cpp  ASTVisitor.h
src/codegen/context/: CodegenContext.cpp  CodegenContext.h
src/codegen/visitors/: CodegenVisitor.cpp  CodegenVisitor.h  LLVMCodeGenerator.h  LLVMVisitor.h
src/compiler/: Compiler.cpp  Compiler.h
src/error/: CompilerError.cpp  CompilerError.h  ErrorManager.cpp  ErrorManager.h  ErrorTypes.h
src/lexer/: Lexer.cpp  Lexer.h  LookUpKeyword.h  LookupKeyword.h  Tokens.h  TokensUtils.h  charTables.h
src/parser/: Parser.cpp  Parser.h
src/preprocessor/: Preprocessor.cpp  Preprocessor.h  Preprocessor_template.cpp  Sanitize.cpp  main.txt  test.txt
src/semantic/: RvalExpressionType.h  ScopeManager.cpp  ScopeManager.h  Semantic.cpp  Semantic.h  SemanticAnalyzer.cpp  SemanticContext.cpp  SemanticVisitor.cpp  SemanticVisitor.h  StringInterner.cpp  StringInterner.h  Symbol.cpp  Symbol.h  SymbolCollector.cpp  SymbolTable.cpp  SymbolTable.h  TypeCk.cpp  TypeCompatibility.cpp  TypeCompatibility.h
src/semantyc/: Semantic.h
src/utils/: utils.cpp  utils.h
test/: ComparisonP_BitO.umbra  file_inclusion.umbra  lexer_test.cpp  numeros.umbra
tests/: CMakeLists.txt  TESTING.md
tests/lexer/: CMakeLists.txt  lexer_test.cpp
